--- a/Winey-Domain/src/main/resources/application-domain-local-dev.yml
+++ b/Winey-Domain/src/main/resources/application-domain-local-dev.yml
@@ -6,7 +6,7 @@ spring:
     init:
       platform: mysql
   datasource:
-    url: ${DB_URL_HOST}
+    url: ${DEV_DB_URL_HOST}
     username: ${AWS_DB_USER_NAME}
     password: ${AWS_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
