--- a/.github/workflows/dev_api_ci_cd.yml
+++ b/.github/workflows/dev_api_ci_cd.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Generate deployment packagez
         run: |
           mkdir -p deploy
-          cp Winey-API/build/libs/*.jar deploy/winey-dev-api.jar
+          cp Winey-API/build/libs/*.jar deploy/winey-api.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions-dev deploy/.ebextensions
           cp -r .platform deploy/.platform
