--- a/.github/workflows/dev_api_ci_cd.yml
+++ b/.github/workflows/dev_api_ci_cd.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Generate deployment packagez
         run: |
           mkdir -p deploy
-          cp Winey-API/build/libs/*.jar deploy/winey-api.jar
+          cp Winey-API/build/libs/*.jar deploy/winey-dev-api.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions-dev deploy/.ebextensions
           cp -r .platform deploy/.platform
@@ -71,7 +71,7 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: winey
+          application_name: Winey-Api-Dev
           environment_name: Winey-Api-Dev-env
           version_label: winey-server-api-${{steps.current-time.outputs.formattedTime}}-${{github.sha}}
           region: ap-northeast-2
