--- a/Winey-API/src/main/resources/application.yml
+++ b/Winey-API/src/main/resources/application.yml
@@ -19,6 +19,20 @@ spring:
       pathmatch:
         matching-strategy: ant_path_matcher
 
+springdoc:
+  packages-to-scan: com.example.wineyapi
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: demo-ui.html            # Swagger UI 경로 => localhost:8000/demo-ui.html
+    tags-sorter: alpha            # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬
+    operations-sorter: alpha      # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬
+  api-docs:
+    path: /api-docs/json
+    groups:
+      enabled: true
+  cache:
+    disabled: true
 
 ---
 spring:
