--- a/Winey-API/build.gradle
+++ b/Winey-API/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20090211'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'net.nurigo:sdk:4.2.9'
 
     implementation project(':Winey-Common')
     implementation project(':Winey-Domain')
