--- a/Winey-Infrastructure/build.gradle
+++ b/Winey-Infrastructure/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     api 'io.github.openfeign:feign-httpclient:12.1'
     api 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
     api 'io.github.openfeign:feign-jackson:12.1'
+    api 'com.amazonaws:aws-java-sdk-s3control:1.12.372'
+
     implementation project(':Winey-Common')
 }
 
