ci : aws 액세스키,시크릿 키 오타 수정

--- a/.github/workflows/dev_api_ci_cd.yml
+++ b/.github/workflows/dev_api_ci_cd.yml
@@ -38,8 +38,8 @@ jobs:
           cool-sms.domain: ${{ secrets.COOL_SMS_DOMAIN }}
           aws.s3.bucket: ${{ secrets.AWS_BUCKET }}
           aws.s3.base-url: ${{ secrets.AWS_BASE_URL }}
-          aws.s3.access-key: ${{ secrets.ACCESS_S3_ACCESS_KEY }}
-          aws.s3.secret-key: ${{ secrets.ACCESS_S3_SECRET_KEY }}
+          aws.s3.access-key: ${{ secrets.AWS_S3_ACCESS_KEY }}
+          aws.s3.secret-key: ${{ secrets.AWS_S3_SECRET_KEY }}
 
 
 
