--- a/Winey-Domain/build.gradle
+++ b/Winey-Domain/build.gradle
@@ -10,6 +10,12 @@ repositories {
     mavenCentral()
 }
 
+buildscript {
+    ext {
+        queryDslVersion = "4.4.0"
+    }
+}
+
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'mysql:mysql-connector-java'
@@ -19,8 +25,21 @@ dependencies {
     annotationProcessor("jakarta.persistence:jakarta.persistence-api")
     annotationProcessor("jakarta.annotation:jakarta.annotation-api")
     implementation project(':Winey-Common')
+// QueryDSL
+    api ("com.querydsl:querydsl-core") // querydsl
+    api ("com.querydsl:querydsl-jpa") // querydsl
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
 }
 
+def generated='src/main/generated'
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean.doLast {
+    file(generated).deleteDir()
+}
 
 tasks.named('test') {
     useJUnitPlatform()
