feat: 애플로그인 환경변수 추가

--- a/Winey-API/src/main/resources/application.yml
+++ b/Winey-API/src/main/resources/application.yml
@@ -37,6 +37,11 @@ springdoc:
     disabled: true
   use-fqn: true
 
+oauth:
+  apple:
+    iss: ${APPLE_ISS}
+    client-id: ${APPLE_CLIENT_ID}
+
 ---
 spring:
   config:
