--- a/.github/workflows/dev_api_ci_cd.yml
+++ b/.github/workflows/dev_api_ci_cd.yml
@@ -40,8 +40,8 @@ jobs:
           aws.s3.base-url: ${{ secrets.AWS_BASE_URL }}
           aws.s3.access-key: ${{ secrets.AWS_S3_ACCESS_KEY }}
           aws.s3.secret-key: ${{ secrets.AWS_S3_SECRET_KEY }}
-
-
+          oauth.apple.iss: ${{ secrets.APPLE_ISS }}
+          oauth.apple.client-id: ${{ secrets.APPLE_CLIENT_ID }}
 
       - name: Set Environment - Domain DEV Yml
         uses: microsoft/variable-substitution@v1
