--- a/Winey-Domain/build.gradle
+++ b/Winey-Domain/build.gradle
@@ -19,6 +19,12 @@ buildscript {
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'mysql:mysql-connector-java'
+    api group: 'org.hibernate', name: 'hibernate-spatial', version: '5.6.9.Final'
+    implementation 'org.locationtech.jts:jts-core:1.18.1'
+    // ===  하이버네이트 공간 검색 특화 - 추가됨 ===
+    implementation 'org.hibernate:hibernate-spatial'
+    implementation 'com.querydsl:querydsl-spatial'
+
 
     runtimeOnly 'com.h2database:h2'
 
