chore : map struct gradle 위치 변경

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ subprojects{
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
+        //map struct
+        implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
     }
 
     tasks.named('test') {
