--- a/Winey-Common/build.gradle
+++ b/Winey-Common/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     api group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
     api group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
+    api 'com.slack.api:slack-api-client:1.27.2'
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
