CI : Grafana + Prometheus 적용

--- a/.ebextensions-dev/00-makeFiles.config
+++ b/.ebextensions-dev/00-makeFiles.config
@@ -4,5 +4,13 @@ files:
         owner: webapp
         group: webapp
         content: |
+            systemctl dameon-reload
+            systemctl start node_exporter
+            systemctl enable node_exporter
+            systemctl start prometheus
+            systemctl enable prometheus
+            systemctl start grafana-server
+            systemctl enable node_exporter
+            sudo systemctl enable grafana-server
             kill `ps -ef | grep match-dev-api | awk '{print $2}'`
             java -Dspring.profiles.active=dev -Dfile.encoding=UTF-8 -jar /var/app/current/winey-dev-api.jar
