CI : 모니터링 관련 설정

--- a/Winey-API/src/main/resources/application.yml
+++ b/Winey-API/src/main/resources/application.yml
@@ -3,6 +3,12 @@ server:
   servlet:
     context-path: /
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
+
 spring:
   profiles:
     include:
