chore : 라이브러리 위치 변경

--- a/Winey-API/build.gradle
+++ b/Winey-API/build.gradle
@@ -15,14 +15,14 @@ jar {
 dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation group: 'org.json', name: 'json', version: '20090211'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'net.nurigo:sdk:4.2.9'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
     implementation project(':Winey-Common')
     implementation project(':Winey-Domain')
     implementation project(':Winey-Infrastructure')
-    implementation project(':Winey-Batch')
 }
 test {
     useJUnitPlatform()
