--- a/Winey-Domain/build.gradle
+++ b/Winey-Domain/build.gradle
@@ -19,15 +19,14 @@ buildscript {
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'mysql:mysql-connector-java'
-    runtimeOnly 'com.h2database:h2'
-
-    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
-    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
-    implementation project(':Winey-Common')
-    // QueryDSL
     api ("com.querydsl:querydsl-core") // querydsl
     api ("com.querydsl:querydsl-jpa") // querydsl
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
+    runtimeOnly 'com.h2database:h2'
+    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+
+    implementation project(':Winey-Common')
 }
 
 def generated='src/main/generated'
