--- a/Winey-Infrastructure/build.gradle
+++ b/Winey-Infrastructure/build.gradle
@@ -12,13 +12,12 @@ repositories {
 
 dependencies {
     api 'io.github.openfeign:feign-httpclient:12.1'
-    api 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
     api 'io.github.openfeign:feign-jackson:12.1'
     api 'com.amazonaws:aws-java-sdk-s3control:1.12.372'
+    api 'com.google.firebase:firebase-admin:8.1.0'
+    api 'com.slack.api:slack-api-client:1.27.2'
 
-    api group: 'com.google.firebase', name: 'firebase-admin', version: '8.1.0'
-
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
     implementation project(':Winey-Common')
 }
 
