--- a/Winey-Common/build.gradle
+++ b/Winey-Common/build.gradle
@@ -16,7 +16,10 @@ dependencies {
     api 'org.springframework.boot:spring-boot-starter-aop'
     api 'org.springframework.boot:spring-boot-starter-web'
     api 'org.redisson:redisson-spring-boot-starter:3.18.0'
-    api 'io.jsonwebtoken:jjwt-api:0.11.2'
+    api group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    api group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    api group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
     api 'org.springframework.boot:spring-boot-starter-security'
 }
 
