memo : prometheus 관련 설정

--- a/Winey-API/src/main/resources/application.yml
+++ b/Winey-API/src/main/resources/application.yml
@@ -8,7 +8,9 @@ management:
     web:
       exposure:
         include: prometheus
-
+  endpoint:
+    prometheus:
+      enabled: true
 spring:
   profiles:
     include:
