--- a/.github/workflows/prod_api_ci_cd.yml
+++ b/.github/workflows/prod_api_ci_cd.yml
@@ -45,6 +45,7 @@ jobs:
           aws.s3.access-key: ${{ secrets.AWS_S3_ACCESS_KEY }}
           aws.s3.secret-key: ${{ secrets.AWS_S3_SECRET_KEY }}
           spring.redis.host: ${{ secrets.REDIS_HOST }}
+          spring.redis.port: ${{ secrets.REDIS_PROD_HOST }}
           oauth.apple.iss: ${{ secrets.APPLE_ISS }}
           oauth.apple.client-id: ${{ secrets.APPLE_CLIENT_ID }}
           slack.webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -89,7 +90,7 @@ jobs:
           cp Procfile deploy/Procfile
           cp -r .ebextensions-prod deploy/.ebextensions
           cp -r .platform deploy/.platform
-          cd deploy && zip -r winey-server-api-${{steps.current-time.outputs.formattedTime}}-${{github.sha}} .
+          cd deploy && zip -r winey-prod-api-${{steps.current-time.outputs.formattedTime}}-${{github.sha}} .
 
       - name: Deploy Consumer to EB
         uses: einaregilsson/beanstalk-deploy@v19
