CI : WINEY PROD DB URL git action refactor

--- a/.github/workflows/prod_api_ci_cd.yml
+++ b/.github/workflows/prod_api_ci_cd.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           files: ./Winey-Domain/src/main/resources/application-domain-prod.yml
         env:
-          spring.datasource.url: ${{ secrets.PRDD_DB_URL_HOST }}
+          spring.datasource.url: ${{ secrets.PROD_DB_URL_HOST }}
           spring.datasource.username: ${{ secrets.AWS_DB_USER_NAME }}
           spring.datasource.password: ${{ secrets.AWS_DB_PASSWORD }}
 
