--- a/.ebextensions-dev/promtail.config
+++ b/.ebextensions-dev/promtail.config
@@ -31,6 +31,7 @@ files:
                 - localhost
               labels:
                 job: beanstalk
+                env: prod  # 여기서 환경 레이블을 설정합니다.
                 __path__: /var/log/webstd.out
     mode: "000644"
     owner: root
