memo : promtail -> loki 파일 작성

--- a/.ebextensions-dev/promtail.config
+++ b/.ebextensions-dev/promtail.config
@@ -6,10 +6,15 @@ packages:
 commands:
   01_download_promtail:
     command: |
+      echo "Downloading Promtail..."
       wget https://github.com/grafana/loki/releases/download/v2.2.1/promtail-linux-amd64.zip -O /tmp/promtail-linux-amd64.zip
+      echo "Unzipping Promtail..."
       unzip /tmp/promtail-linux-amd64.zip -d /tmp
+      echo "Moving Promtail to /usr/local/bin..."
       mv /tmp/promtail-linux-amd64 /usr/local/bin/promtail
+      echo "Setting permissions..."
       chmod +x /usr/local/bin/promtail
+      echo "Promtail installation completed."
 
 files:
   "/etc/promtail/promtail-config.yaml":
@@ -31,7 +36,7 @@ files:
                 - localhost
               labels:
                 job: beanstalk
-                env: prod  # 여기서 환경 레이블을 설정합니다.
+                env: prod  # 환경 레이블 추가
                 __path__: /var/log/webstd.out
     mode: "000644"
     owner: root
@@ -53,7 +58,7 @@ files:
     owner: root
     group: root
 
-commands:
+container_commands:
   02_enable_promtail:
     command: |
       systemctl daemon-reload
