memo : promtail -> loki 파일 작성

--- a/.ebextensions-dev/promtail.config
+++ b/.ebextensions-dev/promtail.config
@@ -36,8 +36,8 @@ files:
                 - localhost
               labels:
                 job: beanstalk
-                env: prod  # 환경 레이블 추가
-                __path__: /var/log/webstd.out
+                env: dev  # 환경 레이블 추가
+                __path__: /var/log/web.stdout.log
     mode: "000644"
     owner: root
     group: root
